<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/list"
            app:layout_constraintTop_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/chalkboard"
                    android:text="@string/language"
                    android:textSize="16sp"
                    tools:typeface="serif" />

                <Spinner
                    android:id="@+id/languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@+id/language"
                    app:layout_constraintStart_toEndOf="@id/language" />
                </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar0"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Switch
                android:id="@+id/downloadAllTracks"
                android:fontFamily="@font/chalkboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/downloadAllTracks"
                android:textSize="16sp"
                tools:typeface="serif"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/downloadFavoriteTracks"
                android:fontFamily="@font/chalkboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/downloadFavoriteTracks"
                android:textSize="16sp"
                tools:typeface="serif"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/showOnlyFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/showOnlyFavorite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/downloadFavoriteTracks"
                tools:typeface="serif" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sorting"
                android:fontFamily="@font/chalkboard"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                tools:typeface="serif"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/sorting"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/sort19"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/sort19"
                    android:fontFamily="@font/chalkboard"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/sort91"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/sort91"
                    android:fontFamily="@font/chalkboard"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/sortAsc"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/sortAsc"
                    android:fontFamily="@font/chalkboard"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/shuffle"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/shuffle"
                    android:fontFamily="@font/chalkboard"
                    android:textSize="16sp" />
            </RadioGroup>

            <Switch
                android:id="@+id/groupByAuthor"
                android:fontFamily="@font/chalkboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/groupByAuthor"
                android:textSize="16sp"
                tools:typeface="serif"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Switch
                android:id="@+id/autoQuit"
                android:fontFamily="@font/chalkboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/sleep_timeout"
                android:textSize="16sp"
                tools:typeface="serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showOnlyFavorite" />

            <SeekBar
                android:id="@+id/timeout"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:max="36"
                android:min="1"
                android:progress="6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/autoQuit" />

            <TextView
                android:id="@+id/timeoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/chalkboard"
                android:text="45"
                android:textSize="16sp"
                tools:typeface="serif" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>